<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/firmware_update"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/system_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="20dp"
            android:text="1.0"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/system_version"
            android:layout_alignBottom="@+id/system_version"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="@string/info_version"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_choose_file"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/system_version"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blue"
            android:text="@string/choose_file" />

        <TextView
            android:id="@+id/image_validity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btn_choose_file"
            android:padding="20dp"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/image_validity"
            android:layout_alignBottom="@+id/image_validity"
            android:layout_alignLeft="@+id/btn_choose_file"
            android:padding="10dp"
            android:text="@string/info_no_file"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_upload_firmware"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:text="@string/infoUploadFirmware"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/upgrade_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/upgrade_percentage_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:indeterminate="false"
            android:max="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:progress="50" />

        <TextView
            android:id="@+id/upgrade_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/percentage_done" />

    </RelativeLayout>

    <TextView
        android:id="@+id/firmware_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/firmware_warning"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>
</ScrollView>
