<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
 
    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:background="@drawable/image_bg"
        android:layout_marginRight="5dip">
 
        <ImageView
            android:id="@+id/bt_device_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@drawable/ic_launcher_opel"/>
 
    </LinearLayout>
 
    <TextView
        android:id="@+id/bt_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/device"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"/>
 
    <!-- Artist Name -->
    <TextView
        android:id="@+id/bt_device_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_device_name"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/mac_address" />
 
     <!-- Rightend Arrow -->

     <Button
         android:id="@+id/btn_bt_connect"
         style="@style/ButtonTextSmall"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/thumbnail"
         android:layout_alignRight="@+id/bt_device_address"
         android:layout_below="@+id/bt_device_name"
         android:background="@drawable/button_green"
         android:text="@string/bt_connect" />
 
</RelativeLayout>